welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:0: error: not found: value growFlowers
	    growFlowers();
            ^FlowerPot:2: error: not found: type color
def growflowers(cl:color) {
                   ^FlowerPot:10: error: not found: value poseBrosse
{setCouleurBrosse(c);poseBrosse;leveBrosse	
                     ^